Configuration Seeder for RolUser, StatesCities, fixing SecurityConfig, adding an api-prefix, and updating migration